--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Generate snake svg
         uses: Platane/snk@master
         with:
-          github_user_name: YOUR_GITHUB_USERNAME
+          github_user_name: FlukeSupakorn
           svg_out_path: dist/github-contribution-grid-snake.svg
 
       - name: Push to output branch
