--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -8,15 +8,19 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
+      - uses: actions/checkout@v3
+      
       - name: Generate snake svg
-        uses: Platane/snk@master
+        uses: Platane/snk@v3
         with:
           github_user_name: FlukeSupakorn
-          svg_out_path: dist/github-contribution-grid-snake.svg
+          outputs_dir: dist
 
       - name: Push to output branch
-        uses: crazy-max/ghaction-github-pages@v2.1.3
+        uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
           build_dir: dist
